--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <!-- bootstrap css -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <!-- start  The Boot For contact whit customer   -->
+  
+  <!-- end  The Boot For contact whit customer   -->
   </head>
 
 <body>
