--- a/services.html
+++ b/services.html
@@ -450,7 +450,7 @@ RIGHT SIDEBAR TOGGLE SECTION
               </div>
           </div>
           <div class="d-grid grid-col-2 bottom-copies">
-              <p class="copy-footer-29">© 2022 Technology Mind. All rights reserved | Designed by <a href="https://nsr404.github.io/mycv_spark/" target="_blank" class="my_website">NSR WADI</a></p>
+              <p class="copy-footer-29">© 2022 Technology Mind. All rights reserved | Designed by <a href="https://nsr404.github.io/cv-spark/" target="_blank" class="my_website">NSR WADI</a></p>
                <ul class="list-btm-29">
                       <li><a href="#link" target="_self">Privacy policy</a></li>
                       <li><a href="#link" target="_self">Terms of service</a></li>
